add swagger final
